--- a/Resources/sv.lproj/Localizable.strings
+++ b/Resources/sv.lproj/Localizable.strings
@@ -389,10 +389,12 @@
 "new_transaction" = "Inkommande transaktion";
 "click_to_receive" = "Klicka för att ta emot Beam";
 "album" = "Album";
-"add_contact" = "Add contact";
-"address_already_exist_1" = "This address already exists";
-"address_already_exist_2" = "You can't save your address.\nThis address already exists";
-"confirm_transaction_1" = "Use Touch ID or enter your password to confirm transaction";
-"confirm_transaction_2" = "Use Face ID or enter your password to confirm transaction";
-"confirm_transaction_3" = "Enter your password to confirm transaction";
+"add_contact" = "Lägg till kontakt";
+"address_already_exist_1" = "Denna adress finns redan";
+"address_already_exist_2" = "Du kan inte spara denna adress.\nDenna adress finns redan";
+"confirm_transaction_1" = "Använd Touch-ID eller mata in ditt lösenord för att bekräfta transaktion";
+"confirm_transaction_2" = "Använd Ansikts-ID eller mata in ditt lösenord för att bekräfta transaktion";
+"confirm_transaction_3" = "Ange ditt lösenord för att bekräfta transaktion";
 "ok" = "OK";
+"transactions_list" = "Transaktionslista";
+"in_24_hours_now" = "Inom 24 timmar från och med nu";
