--- a/Resources/vi.lproj/Localizable.strings
+++ b/Resources/vi.lproj/Localizable.strings
@@ -389,10 +389,12 @@
 "new_transaction" = "Giao dịch đang đến";
 "click_to_receive" = "Nhấn để nhận Beam";
 "album" = "Album";
-"add_contact" = "Add contact";
-"address_already_exist_1" = "This address already exists";
-"address_already_exist_2" = "You can't save your address.\nThis address already exists";
-"confirm_transaction_1" = "Use Touch ID or enter your password to confirm transaction";
-"confirm_transaction_2" = "Use Face ID or enter your password to confirm transaction";
-"confirm_transaction_3" = "Enter your password to confirm transaction";
-"ok" = "OK";
+"add_contact" = "Thêm liên hệ";
+"address_already_exist_1" = "Địa chỉ này đã tồn tại";
+"address_already_exist_2" = "Bạn không thể lưu địa chỉ.\nĐịa chỉ này đã tồn tại";
+"confirm_transaction_1" = "Sử dụng Touch ID hoặc nhập mật khẩu của bạn để xác nhận giao dịch";
+"confirm_transaction_2" = "Sử dụng Face ID hoặc nhập mật khẩu của bạn để xác nhận giao dịch";
+"confirm_transaction_3" = "Nhập mật khẩu của bạn để xác nhận giao dịch";
+"ok" = "Đồng ý";
+"transactions_list" = "Transactions list";
+"in_24_hours_now" = "In 24 hours from now";
