--- a/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Resources/zh-Hans.lproj/Localizable.strings
@@ -1,57 +1,57 @@
 "restore_wallet_title" = "恢复钱包";
-"restore_wallet_info" = "您的资金可以从区块链网络中读取并恢复。交易历史使用您设置的密码加密后储存在本机，因而不能从区块链网络上恢复。\n\n";
-"no_space_title" = "没有足够的存储空间";
+"restore_wallet_info" = "您的资金可以从区块链网络中读取并恢复\n交易历史使用您设置的密码加密后储存在本机，因而不能从区块链网络上恢复\n\n";
+"no_space_title" = "存储空间不足";
 "no_space_info" = "本设备上需要有200MB以上空间方能恢复钱包";
 "beam_title" = "可扩展加密数字货币";
-"create_new_wallet" = "创建新的钱包";
+"create_new_wallet" = "创建新钱包";
 "enter_password_title" = "请输入密码以使用钱包";
 "empty_password" = "密码不能为空";
 "incorrect_password" = "密码错误";
 "incompatible_node_title" = "节点不兼容";
-"incompatible_node_info" = "您试图连接到一个不兼容的节点。";
-"change_settings" = "设置";
+"incompatible_node_info" = "您试图连接到一个不兼容的节点";
+"change_settings" = "修改设置";
 "cancel" = "取消";
 "open_another_wallet" = "切换钱包";
-"seed_capture_warning" = "您刚刚截图了您的助记词。将截图图片保存在手机上会导致资金安全风险。强烈建议从手机照片库中永久删除助记词截图（需在”最近删除“文件夹中再次删除）。";
-"seed_prhase" = "种子短语";
-"inpur_seed" = "输入您的种子短语";
+"seed_capture_warning" = "您刚刚截图了您的助记词\n将截图图片保存在手机上会导致资金安全风险！\n强烈建议从手机照片库中永久删除助记词截图（需在”最近删除“文件夹中再次删除）";
+"seed_prhase" = "助记词";
+"inpur_seed" = "请输入助记词";
 "confirm_seed_text" = "为验证助记词已被您被正确誊写并保存，请根据下面数字提示输入相应的助记词";
-"display_seed" = "种子短语是进入你钱包的钥匙。打印或写下这个短语，妥善保存。如果您丢失种子短语，将失去该钱包所有的钱。";
-"intro_seed_main" = "通过生成助记词来创建新钱包。如果您不幸丢失了本设备，可以通过助记词来恢复钱包。永远不要使用“钥匙串”功能或密码管理器功能来存储助记词。永远不要用电子系统或云盘保存助记词。";
-"intro_seed_1" = "不要让任何人看到您的种子短语";
-"intro_seed_2" = "永远不要在密码管理器或其他地方输入您的种子短语";
-"intro_seed_3" = "在一般情况下，至少保存2份备份";
-"save_seed_title" = "保存种子短语";
-"save_seed_info" = "请把种子短语写下来。不要截屏保存在您的相册中。因为这样很容易受到攻击或遇到手机丢失的风险。";
-"generate_seed" = "生成种子短语";
+"display_seed" = "助记词是访问您账户资金的密钥\n必须打印或誊写助记词，并将其妥善保存在保险箱中\n如果您遗失或忘记助记词，您将无法找回或恢复钱包中的资金";
+"intro_seed_main" = "通过生成助记词来创建新钱包\n如果您不幸丢失了本设备，可以通过助记词来恢复钱包\n永远不要使用“钥匙串”功能或密码管理器功能来存储助记词\n永远不要用电子系统或云盘保存助记词";
+"intro_seed_1" = "不要向任何人泄漏您的助记词";
+"intro_seed_2" = "永远不要使用密码管理器或其他电子方式保存助记词";
+"intro_seed_3" = "请至少誊写2份助记词并分别安全保管以防意外";
+"save_seed_title" = "保存助记词";
+"save_seed_info" = "请誊写记录助记词并妥善保存\n切勿将助记词截屏保存在您的手机相册中\n手机丢失、被盗或被他人访问将有暴露助记词而丢失所有资金的风险";
+"generate_seed" = "生成助记词";
 "create_new_wallet" = "创建新钱包";
 "copied_to_clipboard" = "已复制到剪贴板";
 "done" = "完成";
-"confirm_seed" = "确认种子短语";
+"confirm_seed" = "确认助记词";
 "open_your_wallet" = "打开钱包";
 "password" = "密码";
 "return_to_seed_title" = "返回助记词界面";
-"return_to_seed_info" = "如果您返回上一屏幕，将会产生新的助记词且当前输入的密码不会被保存。";
+"return_to_seed_info" = "如果您返回上一屏幕，将会产生新的助记词且当前输入的密码不会被保存";
 "return" = "返回";
 "old_password" = "新密码不能与旧密码相同";
 "enable" = "启用";
 "dont_use" = "不使用";
 "change_password" = "修改密码";
 "passwords_dont_match" = "密码不正确";
-"create_new_password" = "更改密码来访问您的钱包";
-"enter_password" = "输入密码";
-"confirm_password" = "确认密码";
-"password_requariments" = "强密码需要满足以下要求:\n•长度必须至少为10个字符\n•必须包含至少一个小写字母\n•必须包含至少一个大写字母\n•必须包含至少一个数字";
-"creating_wallet" = "创建钱包";
+"create_new_password" = "创建新密码以访问您的钱包";
+"enter_password" = "请输入新密码";
+"confirm_password" = "请确认新密码";
+"password_requariments" = "强密码需要满足以下要求：\n• 长度必须至少为10个字符\n• 必须包含至少一个小写字母\n• 必须包含至少一个大写字母\n• 必须包含至少一个数字";
+"creating_wallet" = "正在创建钱包";
 "error" = "错误";
 "restoring_wallet" = "正在恢复钱包";
 "restored" = "已恢复 ";
 "loading_wallet" = "正在载入钱包";
-"no_internet" = "没有网络连接";
+"no_internet" = "无网络连接";
 "wallet_not_created" = "未创建钱包";
-"wallet_not_opened" = "钱包不能打开";
-"restor_wallet_warning" = "请等待同步，不要关闭或最小化应用程序。";
-"restor_wallet_info" = "仅可恢复钱包余额(UTXO)。交易历史信息保存在本地，区块链上不保存交易历史。";
+"wallet_not_opened" = "钱包无法打开";
+"restor_wallet_warning" = "请等待同步，不要关闭或最小化应用程序";
+"restor_wallet_info" = "仅可恢复钱包余额(UTXO)\n交易历史信息保存在本地，区块链上不保存交易历史";
 "receive" = "收款";
 "send" = "付款";
 "available" = "可用余额";
@@ -95,7 +95,7 @@
 "enable_face_id_text" = "是否使用面容ID登录钱包?\n\n登录后可在设置菜单中随时启用或禁用面容ID";
 "enable_touch_id_text" = "是否使用触控ID登录钱包?\n\n登录后可在设置菜单中随时启用或禁用";
 "external_link_title" = "外部链接";
-"external_link_text" = "Beam钱包需要获取权限以在浏览器中打开外部链接。在浏览器中打开外部外链会暴露您的IP地址。如不想暴露IP地址，请选择“取消”。您可以随时在设置中修改该选项。";
+"external_link_text" = "Beam钱包需要获取权限以在浏览器中打开外部链接\n\n在浏览器中打开外部外链会暴露您的IP地址；如不想暴露IP地址，请选择“取消”；您可以随时在设置中修改该选项";
 "open" = "打开";
 "addresses" = "地址";
 "utxo" = "UTXO";
@@ -127,8 +127,8 @@
 "expire_now" = "立即令地址失效";
 "open_settings" = "打开设置";
 "camera_denied_text" = "隐私设置阻止了访问摄像头，无法进行二维码扫描。通过以下步骤解决：\n\n1. 点击下方前往按钮打开设置；\n2. 允许访问摄像头；\n3. 打开本钱包继续。";
-"camera_restricted" = "本设备现在设置不允许使用摄像头。该功能需要访问摄像头才能使用。请联系机主并请求访问权限。";
-"error_scan_qr_code" = "无法识别二维码，请重试。";
+"camera_restricted" = "本设备现在设置不允许使用摄像头\n该功能需要访问摄像头才能使用\n请联系机主并请求访问权限";
+"error_scan_qr_code" = "无法识别二维码，请重试";
 "scan_qr_code" = "扫描二维码";
 "scan_tg_qr_code" = "扫描Telegram二维码";
 "receive" = "收款";
@@ -210,13 +210,13 @@
 "ownerkey_touchid_confirm" = "请使用触控ID完成认证";
 "name" = "名称";
 "confirm" = "确认";
-"send_to" = "付款至：";
+"send_to" = "付款至";
 "amount_to_send" = "付款金额";
 "total_utxo" = "总UTXO价值";
 "send_notice" = "为使交易顺利完成，收款人应于12小时内上线同步其钱包至最新高度，而后您应于2小时内再次上线同步钱包";
 "save_address_title" = "保存地址";
 "save_contact_text" = "是否保存收款人地址以方便未来继续向其付款？";
-"save_address_text" = "是否保存创建的地址并备后用？";
+"save_address_text" = "是否保存创建的地址以备后用？";
 "not_save" = "不保存";
 "address_copied" = "地址已被复制到剪贴板";
 "copy" = "复制";
@@ -271,14 +271,14 @@
 "create_categories_in_settings" = "您可以在设置中创建更多标签";
 "my_addresses" = "我的地址";
 "wrong_requested_amount_title" = "错误的请求数量";
-"wrong_requested_amount_text" = "请求数量不能是0个Beam！请输入正确的数量";
+"wrong_requested_amount_text" = "请求数量不能是0个Beam！\n请输入正确的数量";
 "enter_amount_in_currency" = "请输入金额";
 "scan_btc_qr_code" = "扫描比特币二维码";
 "scan_ltc_qr_code" = "扫描莱特币二维码";
 "scan_eth_qr_code" = "扫描以太坊二维码";
 "buy_transaction_failed_title" = "交易失败";
 "buy_transaction_failed_text_1" = "请刷新重试";
-"buy_transaction_failed_text_2" = "已通知技术支持团队。您的资金是安全的，不要担心。";
+"buy_transaction_failed_text_2" = "已通知技术支持团队\n您的资金是安全的，请勿担心";
 "buy_transaction_success_title" = "交易完成";
 "buy_transaction_success_text" = "即将存入Beam";
 "open_in_explorer" = "在区块链浏览器中打开";
@@ -310,7 +310,7 @@
 "date_time" = "日期 | 时间";
 "utxo_history" = "UTXO历史记录";
 "delete_all_text" = "确认从钱包中删除所有(str)吗？";
-"delete_category_text" = "确定要删除 “(str)\" 标签吗?";
+"delete_category_text" = "确定要删除 “(str)\" 标签吗？";
 "canot_connect_node" = "无法连接到节点";
 "buy_beam_value" = "付款 (value) to (name) 地址以完成交易"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
 "scan_receiver_qr_code" = "扫描收款人二维码";
@@ -321,7 +321,7 @@
 "utxo_type_change" = "更换"; // utxo type
 "your_current_password" = "请输入当前密码";
 "paste_payment_proof" = "请在此处粘贴付款证明";
-"payment_proof_error" = "无法解码证明，非法序列。";
+"payment_proof_error" = "无法解码证明\n非法序列";
 "tx_status_unknown" = "未知原因";
 "tx_status_cancelled" = "交易已被取消";
 "tx_status_signature" = "节点签名无效";
@@ -358,11 +358,11 @@
 "my_expired" = "已失效"; // addresses
 "general_settings" = "通用设置";
 "unavailable" = "不可用";
-"in_progress_out" = "进行中 (出账)";
-"in_progress_in" = "进行中 (入账)";
-"in_progress_change" = "进行中 (找零)";
+"in_progress_out" = "进行中\n(出账)";
+"in_progress_in" = "进行中\n(入账)";
+"in_progress_change" = "进行中\n(找零)";
 "never_expires" = "永不失效";
-"expires_in" = "失效期限: "; // expires in 6 h 30 m
+"expires_in" = "失效期限"; // expires in 6 h 30 m
 "h" = "小时"; // hour
 "m" = "分钟"; // minute
 "send_qr_secure" = "请向付款方出示该二维码、或通过外部安全媒介将其发送给付款方";
@@ -370,7 +370,7 @@
 "auth_face_confirm" = "请验证面容认证";
 "auth_touch_confirm" = "请验证指纹认证";
 "auth_bio_failed" = "(Mechanism)已因多次失败尝试被锁定\n请输入iPhone密码以启用(Mechanism)"; // (Mechanism) is Face ID or Touch ID.
-"add_all" = "新增所有";
+"add_all" = "添加总余额";
 "my_active_addresses" = "有效地址";
 "tag" = "标签";
 "contacts_empty" = "联系人列表是空的";
@@ -384,15 +384,17 @@
 "paste_owner_key" = "将该代码粘贴入桌面上的Beam钱包中，继续从节点恢复";
 "after_paste_owner_key" = "粘贴代码后，运行电脑上的节点、并在移动App中点击下一步";
 "enter_trusted_node" = "请输入信任的节点地址";
-"trusted_node_error" = "无法连接到节点。请尝试连接钱包到新节点或者使用推荐恢复";
+"trusted_node_error" = "无法连接到节点\n请尝试连接钱包到新节点或者使用推荐恢复";
 "owner_key" = "所有者密钥";
 "new_transaction" = "收到新入账交易";
 "click_to_receive" = "点击以接收Beam";
-"album" = "Album";
-"add_contact" = "Add contact";
-"address_already_exist_1" = "This address already exists";
-"address_already_exist_2" = "You can't save your address.\nThis address already exists";
-"confirm_transaction_1" = "Use Touch ID or enter your password to confirm transaction";
-"confirm_transaction_2" = "Use Face ID or enter your password to confirm transaction";
-"confirm_transaction_3" = "Enter your password to confirm transaction";
-"ok" = "OK";
+"album" = "相册";
+"add_contact" = "新增联系人";
+"address_already_exist_1" = "该地址已存在";
+"address_already_exist_2" = "无法保存地址\n该地址已存在";
+"confirm_transaction_1" = "使用触控ID或输入密码以确认交易";
+"confirm_transaction_2" = "使用面容ID或输入密码以确认交易";
+"confirm_transaction_3" = "请输入密码以确认交易";
+"ok" = "好";
+"transactions_list" = "交易列表";
+"in_24_hours_now" = "此后24小时";
