--- a/Resources/ru.lproj/Localizable.strings
+++ b/Resources/ru.lproj/Localizable.strings
@@ -50,7 +50,7 @@
 "no_internet" = "Нет соединения с Интернетом";
 "wallet_not_created" = "Кошелек не создан";
 "wallet_not_opened" = "Ошибка при открытии кошелька";
-"restor_wallet_warning" = "Дождитесь окончания синхронизации. Не закрывайте и не сворачивайте окно приложения.";
+"restor_wallet_warning" = "Пожалуйста, подождите завершения синхронизации и не закрывайте или сворачивайте приложение. Восстановление кошелька может занять некоторое время.";
 "restor_wallet_info" = "Будет восстановлен только баланс кошелька (UTXO). Информация о транзакциях не хранится в блокчейне.";
 "receive" = "Получить";
 "send" = "Отправить";
@@ -402,3 +402,11 @@
 "min_fee_error" = "Минимальная комиссия (value) GROTH"; // The minimum fee is 100 GROTH
 "date" = "Дата";
 "downloading_blockchain" = "Загрузка информации о блокчейне";
+"and" = " и"; // example: addresses and contacts
+"auto_restore_warning" = "Пожалуйста, убедитесь, что вы не сделали никаких транзакций (с любого устройства) в течение последнего часа. Если вы сделали, пожалуйста, подождите, как минимум, час с момента последней транзакции, прежде чем продолжить восстановление. В противном случае, ваш восстановленный баланс может быть неправильным и потребуется дополнительная процедура восстановления.";
+"manual_restore_warning" = "Убедитесь, что ваш узел полностью синхронизирован с блокчейном перед началом процедуры восстановления. В противном случае, ваш восстановленный баланс может быть неправильным и потребуется дополнительная процедура восстановления.";
+"understand" = "Понятно";
+"NSPhotoLibraryAddUsageDescription" = "Сохранить детали транзакции и сканировать QR-коды из фотографий";
+"NSPhotoLibraryUsageDescription" = "Предоставьте доступ к галерее для выбора QR-кода";
+"NSFaceIDUsageDescription" = "Это приложение требует разрешения Face ID для аутентификации с помощью распознавания лица";
+"NSCameraUsageDescription" = "Камера необходима для сканирования QR-кодов";
