--- a/Resources/vi.lproj/Localizable.strings
+++ b/Resources/vi.lproj/Localizable.strings
@@ -50,7 +50,7 @@
 "no_internet" = "Không có kết nối Internet";
 "wallet_not_created" = "Ví không được tạo";
 "wallet_not_opened" = "Ví không thể mở";
-"restor_wallet_warning" = "Vui lòng đợi đồng bộ hóa và không đóng hoặc thu nhỏ ứng dụng.";
+"restor_wallet_warning" = "Please wait for synchronization and do not close or minimize the application. Restoring the wallet may take a while.";
 "restor_wallet_info" = "Chỉ có thể khôi phục số dư ví (UTXO), thông tin giao dịch luôn ở chế độ riêng tư và không bao giờ được giữ trong blockchain.";
 "receive" = "Nhận";
 "send" = "Gửi";
@@ -350,8 +350,8 @@
 "invalid_address_title" = "Địa chỉ không hợp lệ";
 "invalid_address_text" = "Địa chỉ nút được cung cấp không hợp lệ.\n  Vui lòng kiểm tra xem địa chỉ đã nhập có đúng không";
 "insufficient_funds" = "Không đủ tiền: bạn sẽ cần (giá trị) beams để hoàn thành giao dịch";
-"downloading" = "Đang tải";
-"sent_to_own" = "Gửi đến địa chỉ riêng";
+"downloading" = "Downloaded";
+"sent_to_own" = "Sent to own address";
 "sending_to_own" = "Đang gửi đến địa chỉ riêng";
 "default" = "Mặc định";
 "my_active" = "Hoạt động của tôi"; // addresses
@@ -398,3 +398,15 @@
 "ok" = "Đồng ý";
 "transactions_list" = "Transactions list";
 "in_24_hours_now" = "In 24 hours from now";
+"transaction_history" = "Transaction history";
+"min_fee_error" = "The minimum fee is (value) GROTH"; // The minimum fee is 100 GROTH
+"date" = "Date";
+"downloading_blockchain" = "Downloading blockchain info";
+"and" = "and"; // example: addresses and contacts
+"auto_restore_warning" = "Please make sure that you have not done any transactions (from any device) in the past hour. If you did, please wait for at least one hour after the last transaction before proceeding with Restore. Otherwise, your restored balance may be incorrect and additional restore procedure will be required.";
+"manual_restore_warning" = "Verify that your node is fully synchronised with the blockchain before starting the restore procedure. Otherwise, your restored balance may be incorrect and additional restore procedure will be required.";
+"understand" = "I understand";
+"NSPhotoLibraryAddUsageDescription" = "Save transaction details and scan QR-codes from the photos";
+"NSPhotoLibraryUsageDescription" = "Provide gallery access to select QR code";
+"NSFaceIDUsageDescription" = "This app requires Face ID permission to authenticate using Face recognition";
+"NSCameraUsageDescription" = "The camera is needed to scan QR codes";
