--- a/Resources/fi-FI.lproj/Localizable.strings
+++ b/Resources/fi-FI.lproj/Localizable.strings
@@ -1,93 +1,93 @@
-"restore_wallet_title" = "Restore wallet";
-"restore_wallet_info" = "You are trying to restore an existing Beam Wallet. Please notice that if you use your wallet on another device, your balance will be up to date, but  transaction history and addresses will be kept separately on each device.";
-"no_space_title" = "Not enough storage";
-"no_space_info" = "At least 200MB of free space is required on the device to restore the wallet";
+"restore_wallet_title" = "Palauta vanha lompakko";
+"restore_wallet_info" = "Olet palauttamassa vanhaa lompakkoa. Huomioithan, että jos olet jo käyttänyt lompakkoa toisella laitteella, historiatiedot tilitapahtumista sekä tallentamasi osoitteet eivät siirry uudelle laitteelle palautuksen yhteydessä. Tilitapahtumat sekä osoitteet tallennetaan erikseen kullekin laitteelle. Lompakkosi saldo kuitenkin päivittyy ja on käytettävissä ajantasaisena uudessa laitteessa.";
+"no_space_title" = "Ei tarpeeksi tallennustilaa";
+"no_space_info" = "Vähintään 200 Mb vapaata tallennustilaa tarvitaan, jotta vanha lompakko voidaan palauttaa";
 "beam_title" = "Scalable confidential cryptocurrency";
-"create_new_wallet" = "Create new wallet";
-"enter_password_title" = "Enter your password to access the wallet";
-"empty_password" = "Password can not be empty";
-"incorrect_password" = "Incorrect password";
-"incompatible_node_title" = "Incompatible node";
-"incompatible_node_info" = "You’re trying to connect to an incompatible node.";
-"change_settings" = "Change settings";
-"cancel" = "Cancel";
-"open_another_wallet" = "Open another wallet";
-"seed_capture_warning" = "You’ve just captured your seed phrase. Keeping the image on your phone puts your funds at risk. It is strongly recommended to remove the screenshot manually from your pictures gallery.";
-"seed_prhase" = "Seed phrase";
-"inpur_seed" = "Type in your seed phrase";
-"confirm_seed_text" = "To ensure the seed phrase is written down correctly, please fill in the specific words below";
-"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
-"intro_seed_main" = "Create a new wallet by generating a seed phrase. If you lose your device, you will need the seed phrase to recover your funds. Never type your seed phrase in keychains or password managers. Never save it in your local filesystem or remote folders of any kind.";
-"intro_seed_1" = "Do not let anyone see your seed phrase";
-"intro_seed_2" = "Never type your seed phrase into password managers or elsewhere";
-"intro_seed_3" = "Make at least 2 copies of the phrase in case of emergency";
-"save_seed_title" = "Save seed phrase";
-"save_seed_info" = "Please write the seed phrase down. Do not screenshot it and save it in your photo gallery. It makes the phrase prone to cyber attacks and, therefore, less secure.";
-"generate_seed" = "generate seed phrase";
-"create_new_wallet" = "Create new wallet";
-"copied_to_clipboard" = "Copied to clipboard";
-"done" = "Done";
-"confirm_seed" = "Confirm seed phrase";
-"open_your_wallet" = "Open your wallet";
-"password" = "Password";
-"return_to_seed_title" = "Return to seed phrase";
-"return_to_seed_info" = "If you will return to the previous screen, your seed phrase will reset and your local password will not be saved.";
-"return" = "Return";
-"old_password" = "New password cannot be the same as old";
-"enable" = "Enable";
-"dont_use" = "Don't use";
-"change_password" = "Change password";
-"passwords_dont_match" = "Passwords do not match";
-"create_new_password" = "Create new password to access your wallet";
-"enter_password" = "Enter password";
-"confirm_password" = "Confirm password";
-"password_requariments" = "Strong password needs to meet the following requirements:\n•  the length must be at least 10 characters\n•  must contain at least one lowercase letter\n•  must contain at least one uppercase letter\n•  must contain at least one number";
-"creating_wallet" = "Creating wallet";
-"error" = "Error";
-"restoring_wallet" = "Restoring wallet";
-"restored" = "Restored ";
-"loading_wallet" = "Loading wallet";
-"no_internet" = "No internet connection";
-"wallet_not_created" = "Wallet not created";
-"wallet_not_opened" = "Wallet can not be opened";
-"restor_wallet_warning" = "Please wait for synchronization and do not close or minimize the application. Restoring the wallet may take a while.";
-"restor_wallet_info" = "Only the wallet balance (UTXO) can be restored,  transaction info is always private\nand never kept in the blockchain.";
-"receive" = "Receive";
-"send" = "Send";
-"available" = "Available";
-"in_progress" = "In progress";
-"receiving" = "Receiving";
-"sending" = "Sending";
-"maturing" = "Maturing";
-"sending_address" = "Sending address";
-"receiving_address" = "Receiving address";
-"transaction_fee" = "Transaction fee";
-"transaction_id" = "Transaction ID";
-"kernel_id" = "Kernel ID";
-"comment" = "Comment";
+"create_new_wallet" = "Luo uusi lompakko";
+"enter_password_title" = "Kirjoita salasanasi avataksesi lompakon";
+"empty_password" = "Salasanakohtaa ei voi jättää tyhjäksi";
+"incorrect_password" = "Virheellinen salasana";
+"incompatible_node_title" = "Yhteensopimaton palvelin (node)";
+"incompatible_node_info" = "Yrität liittyä palvelimelle (node), johon ei voida yhdistää.";
+"change_settings" = "Muuta asetuksia";
+"cancel" = "Peruuta";
+"open_another_wallet" = "Avaa toinen lompakko";
+"seed_capture_warning" = "Olet juuri ottanut kuvakaappauksen palautusavaimestasi. Jos pidät kuvaa tallennettuna puhelimessasi, on olemassa riski, että joku ulkopuolinen pääsee käsiksi lompakkosi varallisuuteen. On erittäin suositeltavaa, että poistat kuvan pysyvästi puhelimestasi.";
+"seed_prhase" = "Palautusavain (seed phrase)";
+"inpur_seed" = "Kirjoita palautusavain";
+"confirm_seed_text" = "Varmistaaksesi, että palautusavaimesi sanat on kirjoitettu oikein, täytä alla olevat kentät, joihin kirjoitat sanat oikean numeron kohdalle";
+"display_seed" = "Palautusavaimellasi pääsee käsiksi kaikkeen lompakon varallisuuteen. Tulosta tai kirjoita huolellisesti ylös palautusavaimesi, sekä pidä se tallessa esimerkiksi kassakaapissa, pankkiholvissa tai muussa turvallisesti lukitussa tilassa. Ilman palautusavainta et voi palauttaa lompakkosi saldoa tarvittaessa.";
+"intro_seed_main" = "Luo uusi lompakko generoimalla palautusavain (seed phrase). Jos unohdat salasanasi tai kadotat laitteesi, tarvitset palautusavaimen, jolla voit palauttaa lompakkoon siirretyn varallisuuden. Älä koskaan tallenna palautusavainta salasananhallintaohjelmiin. Älä myöskään koskaan tallenna sitä omalle laitteellesi tai muuhunkaan vastaavaan digitaaliseen muotoon, kuten pilvipalvelinten tallennuskansioihin.";
+"intro_seed_1" = "Älä anna kenenkään nähdä palautusavaintasi";
+"intro_seed_2" = "Älä koskaan tallenna palautusavaintasi salasananhallintaohjelmiin tai muuhunkaan vastaavaan digitaaliseen muotoon";
+"intro_seed_3" = "Kirjoita ylös tai tulosta vähintään kaksi kopiota palautusavaimestasi ennakoimattomien tilanteiden varalta";
+"save_seed_title" = "Ota palautusavain talteen";
+"save_seed_info" = "Kirjoita palautusavaimesi talteen! Älä ota kuvakaappausta siitä äläkä tallenna sitä laitteesi kuvagalleriaan tai muuhunkaan vastaavaan digitaaliseen muotoon! Jos toimit vastoin edellä mainittua ohjetta, se asettaa palautusavaimesi alttiiksi hakkeroinnille ja vähentää lompakon turvallisuutta.";
+"generate_seed" = "generoi palautusavain";
+"create_new_wallet" = "Luo uusi lompakko";
+"copied_to_clipboard" = "Kopioitu leikepöydälle";
+"done" = "Valmis";
+"confirm_seed" = "Vahvista palautusavain";
+"open_your_wallet" = "Avaa lompakko";
+"password" = "Salasana";
+"return_to_seed_title" = "Takaisin palautusavaimeen";
+"return_to_seed_info" = "Jos palaat takaisin edelliseen ruutuun, palautusavaimesi nollautuu eikä salasanaasi tallenneta.";
+"return" = "Takaisin";
+"old_password" = "Uusi salasana ei voi olla sama kuin vanha salasana";
+"enable" = "Ota käyttöön";
+"dont_use" = "Poista käytöstä";
+"change_password" = "Vaihda salasana";
+"passwords_dont_match" = "Salasanat eivät täsmää";
+"create_new_password" = "Vaihda lompakkoosi uusi salasana";
+"enter_password" = "Kirjoita salasana";
+"confirm_password" = "Vahvista salasana";
+"password_requariments" = "Vahvan salasanan tulee täyttää seuraavat kriteerit:\n•  salasanassa täytyy olla vähintään 10 merkkiä\n•  vähintään yksi kirjain pienellä\n•  vähintään yksi kirjain isolla\n•  vähintään yksi numero";
+"creating_wallet" = "Luodaan lompakkoa";
+"error" = "Virhe";
+"restoring_wallet" = "Palautetaan lompakkoa";
+"restored" = "Palautettu ";
+"loading_wallet" = "Ladataan lompakkoa";
+"no_internet" = "Ei internetyhteyttä";
+"wallet_not_created" = "Lompakkoa ei luotu";
+"wallet_not_opened" = "Lompakkoa ei voida avata";
+"restor_wallet_warning" = "Ole hyvä ja odota kunnes synkronointi on valmis. Älä sulje sovellusta tai pienennä ikkunaa. Lompakon palautuksessa saatta kestää jonkin aikaa.";
+"restor_wallet_info" = "Ainoastaan lompakon saldo (UTXO) voidaan palauttaa. Tilitapahtumat pysyvät aina salassa eivätkä ne tallennu lohkoketjuun.";
+"receive" = "Vastaanota";
+"send" = "Lähetä";
+"available" = "Käytettävissä";
+"in_progress" = "Käsitellään";
+"receiving" = "Vastaanotetaan";
+"sending" = "Lähetetään";
+"maturing" = "Keskeneräinen";
+"sending_address" = "Lähettäjän osoite";
+"receiving_address" = "Vastaanottajan osoite";
+"transaction_fee" = "Siirtomaksu";
+"transaction_id" = "Tapahtumatunniste";
+"kernel_id" = "Kernel id";
+"comment" = "Kommentti";
 "failure_reason" = "Failure reason";
-"cancel_transaction" = "Cancel transaction";
-"delete_transaction" = "Delete transaction";
-"repeat_transaction" = "Repeat transaction";
-"general_info" = "General transaction info";
-"payment_proof" = "Payment proof";
-"utxo_list" = "Transaction UTXO list";
-"transaction_details" = "Transaction details";
-"payment_proof_verefication" = "Payment proof verification";
-"code" = "Code";
-"sender" = "Sender";
-"receiver" = "Receiver";
-"amount" = "Amount";
+"cancel_transaction" = "Peruuta maksu";
+"delete_transaction" = "Poista tilitapahtuma";
+"repeat_transaction" = "Toista maksu";
+"general_info" = "Tapahtuman yleiset tiedot";
+"payment_proof" = "Maksutodistus";
+"utxo_list" = "Tapahtuman UTXO-lista";
+"transaction_details" = "Tapahtuman tiedot";
+"payment_proof_verefication" = "Maksutodistuksen varmennus";
+"code" = "Maksutodistuksen koodi";
+"sender" = "Lähettäjä";
+"receiver" = "Vastaanottaja";
+"amount" = "Summa";
 "beam" = " BEAM";
-"spent" = "Spent";
-"total" = "Total";
-"face_id" = "Face ID";
-"touch_id" = "Touch ID";
-"wallet" = "Wallet";
-"empty_transactions_list" = "your transactions history will appear here";
-"transactions" = "Transactions";
-"export" = "Export";
-"activate" = "Activate";
+"spent" = "Käytetty";
+"total" = "Yhteensä";
+"face_id" = "Kasvotunnistus (Face ID)";
+"touch_id" = "Kosketustunnistus (Touch ID)";
+"wallet" = "Lompakko";
+"empty_transactions_list" = "tilitapahtumasi tallentuvat tähän";
+"transactions" = "Tapahtumat";
+"export" = "Vie";
+"activate" = "Aktivoi";
 "activate_security_title" = "Activate security mode";
 "activate_security_text" = "All the balances will be hidden until the eye icon is tapped again";
 "enable_face_id_title" = "Enable Face ID";
@@ -131,7 +131,7 @@
 "error_scan_qr_code" = "QR code cannot be recognized. Please try again.";
 "scan_qr_code" = "Scan QR code";
 "scan_tg_qr_code" = "Scan telegram QR code";
-"receive" = "Receive";
+"receive" = "Vastaanota";
 "hours_24" = "24 hours";
 "delete_all_addresses" = "Delete all addresses";
 "delete_all_contacts" = "Delete all contacts";
@@ -173,7 +173,7 @@
 "undo" = "Undo";
 "repeat" = "Repeat";
 "cancelled" = "Cancelled";
-"delete_transaction_title" = "Delete transaction";
+"delete_transaction_title" = "Poista tilitapahtuma";
 "delete_transaction_text" = "Are you sure you want to delete this transaction from your wallet?";
 "current_password_error" = "Current password is incorrect";
 "categories_empty_title" = "Tags list is empty";
@@ -188,7 +188,7 @@
 "ownerkey_faceid_text" = "Enter your password and use Face ID\nto access the wallet";
 "ownerkey_faceid_subtext" = "To see the owner key you must pass this 2-step verification (submit a password and use Face ID)";
 "ownerkey_touchid_subtext" = "To see the owner key you must pass this 2-step verification (submit a password and use Touch ID)";
-"ownerkey_text" = "Enter your password to access the wallet";
+"ownerkey_text" = "Kirjoita salasanasi avataksesi lompakon";
 "ownerkey_subtext" = "To see the owner key you must pass this verification";
 "ownerkey_copied" = "Owner key code copied to clipboard";
 "advanced" = "Advanced";
@@ -200,7 +200,7 @@
 "address_search" = "Search by address, tag or name";
 "not_found" = "Nothing found";
 "touch_id_ownerkey_verefication" = "Use fingerprint to finish verification and get access to owner key";
-"send" = "Send";
+"send" = "Lähetä";
 "paste_enter_address" = "Paste address or choose contact";
 "incorrect_address" = "Incorrect address";
 "request_amount" = "Request amount (optional)";
@@ -310,15 +310,15 @@
 "date_time" = "Date   |   time";
 "utxo_history" = "UTXO history";
 "delete_all_text" = "Are you sure you want to delete all (str) from your wallet?";
-"delete_category_text" =  "Are you sure you want to delete “(str)” tag?";
+"delete_category_text" = "Are you sure you want to delete “(str)” tag?";
 "canot_connect_node" = "Cannot connect to node";
-"buy_beam_value" = "Send (value) to the above (name) address to complete the transaction"; //example Send 1 BTC to the above BITCOIN address to complete the transaction
+"buy_beam_value" = "Send (value) to the above (name) address to complete the transaction"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
 "scan_receiver_qr_code" = "Scan receiver QR code";
 "owner_key_warning" = "Please notice, that revealing your owner key allows to know all your funds (UTXO). Make sure that you deploy the key at the node you trust completely!";
 "key_code" = "Key code";
 "or" = "Or";
 "pick_address" = "Change"; // change address
-"utxo_type_change" = "Change"; //utxo type
+"utxo_type_change" = "Change"; // utxo type
 "your_current_password" = "Enter your current password";
 "paste_payment_proof" = "Paste your payment proof here";
 "payment_proof_error" = "Cannot decode a proof, illegal sequence";
@@ -340,7 +340,7 @@
 "receiving_amount_dif" = "Receiving amount may differ due to market fluctuations";
 "copy_details" = "Copy details";
 "copy_code" = "Copy code";
-"version" = "App Version"; //example Version 3.1
+"version" = "App Version"; // example Version 3.1
 "as_set" = "as set now";
 "transaction_deleted" = "Transaction deleted";
 "transaction_comment" = "Transaction comment";
@@ -354,22 +354,22 @@
 "sent_to_own" = "Sent to own address";
 "sending_to_own" = "Sending to own address";
 "default" = "Default";
-"my_active" = "My active"; //addresses
-"my_expired" = "My expired"; //addresses
+"my_active" = "My active"; // addresses
+"my_expired" = "My expired"; // addresses
 "general_settings" = "General settings";
 "unavailable" = "Unavailable";
 "in_progress_out" = "In progress\n(outgoing)";
 "in_progress_in" = "In progress\n(incoming)";
 "in_progress_change" = "In progress\n(change)";
 "never_expires" = "Never expires";
-"expires_in" = "Expires in"; //expires in 6 h 30 m
-"h" = "h"; //hour
-"m" = "m"; //minute
+"expires_in" = "Expires in"; // expires in 6 h 30 m
+"h" = "h"; // hour
+"m" = "m"; // minute
 "send_qr_secure" = "Show this QR code to the sender or send it over an external secure channel.";
 "share_transaction" = "Share transaction details";
 "auth_face_confirm" = "Confirm your face to authenticate";
 "auth_touch_confirm" = "Confirm your fingerprint to authenticate";
-"auth_bio_failed" = "(Mechanism) has been locked out due to few fail attemp. Enter iPhone passcode to enable (Mechanism)."; //(Mechanism) is Face ID or Touch ID.
+"auth_bio_failed" = "(Mechanism) has been locked out due to few fail attemp. Enter iPhone passcode to enable (Mechanism)."; // (Mechanism) is Face ID or Touch ID.
 "add_all" = "Add all";
 "my_active_addresses" = "My active addresses";
 "tag" = "Tag";
@@ -399,10 +399,10 @@
 "transactions_list" = "Transactions list";
 "in_24_hours_now" = "In 24 hours from now";
 "transaction_history" = "Transaction history";
-"min_fee_error" = "The minimum fee is (value) GROTH"; //The minimum fee is 100 GROTH
+"min_fee_error" = "The minimum fee is (value) GROTH"; // The minimum fee is 100 GROTH
 "date" = "Date";
 "downloading_blockchain" = "Downloading blockchain info";
-"and" = "and"; //example: addresses and contacts
+"and" = "and"; // example: addresses and contacts
 "auto_restore_warning" = "Please make sure that you have not done any transactions (from any device) in the past hour. If you did, please wait for at least one hour after the last transaction before proceeding with Restore. Otherwise, your restored balance may be incorrect and additional restore procedure will be required.";
 "manual_restore_warning" = "Verify that your node is fully synchronised with the blockchain before starting the restore procedure. Otherwise, your restored balance may be incorrect and additional restore procedure will be required.";
 "understand" = "I understand";
@@ -415,5 +415,3 @@
 "restore_create_title" = "Restore wallet or create new one";
 "restore_create_text" = "If you'll restore a wallet all transaction history and addresses will be lost.";
 "proceed" = "Proceed";
-"info_restore_title" = "Do not simultaneously run two wallets initiated from the same seed phrase";
-"info_restore_text" = "The balance and transaction history won't be synchronised across device and transactions might fail.";
